remove roleId service as is not needed, use /authentications path instead of 'public', use jwt-validator 2.0.1-snapshot version
