# src/main/java/me/sonam/authentication/handler/AuthenticationService.java
@@ -11,14 +11,13 @@ public interface AuthenticationService {
      * @return
      */
     // no jwt required
-    Mono<String> authenticate(Mono<AuthTransfer> authTransferMono);
+    Mono<String> authenticate(Mono<AuthenticationPassword> authTransferMono);
     // no jwt required
-    Mono<String> createAuthentication(Mono<AuthenticationPassword> authTransferMono);
+    Mono<String> createAuthentication(Mono<AuthTransfer> authTransferMono);
     // internal
     Mono<String> activateAuthentication(String authenticationId);
     // requires jwt
     Mono<String> updatePassword(Mono<String> passwordMono, String authenticationId);
     // requires jwt
-    Mono<String> updateRoleId(Mono<String> uuidString, String authenticationId);
     Mono<String> delete(String authenticationId);
 }
